Fixed some style issues on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3817,7 +3817,7 @@
 	#yourgame ul {
 		text-align: left;
 		display: inline-block;
-		padding: 0em 8em;
+		padding: 0% 20%;
 		margin-top: -1em;
 	}
 	
